--- a/test1.html
+++ b/test1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AssemblyScript Compiler in Browser</title>
-    <script src="https://cdn.jsdelivr.net/npm/assemblyscript@0.21.3/dist/web.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/assemblyscript@x.x.x/dist/web.js"></script>
 </head>
 <body>
     <h1>AssemblyScript Compilation Example</h1>
