--- a/test1.html
+++ b/test1.html
@@ -15,16 +15,21 @@
         // Function to compile the AssemblyScript code in the browser
         async function compileAssemblyScript() {
             // Define your AssemblyScript source code
-            const code = `
-                export function brightenImage(imageData: Uint8ClampedArray, mult: number): void {
-                    const len: number = imageData.length;
-                    for (let i: number = 0; i < len; i += 4) {
-                        imageData[i] = <u8>(Math.min(imageData[i] * mult, 255));
-                        imageData[i + 1] = <u8>(Math.min(imageData[i + 1] * mult, 255));
-                        imageData[i + 2] = <u8>(Math.min(imageData[i + 2] * mult, 255));
-                    }
-                }
-            `;
+            const code = `export function brightenImage(imageData: Uint8ClampedArray, mult: number): void {
+    const len: number = imageData.length;
+    let i: number = 0;
+    let x: number = 0, y: number = 0;
+    for (; i < len; i += 4) {
+        // Adjust the three channels, but exclude the alpha (fourth) channel
+        x = i + 1;
+        y = i + 2;
+
+        // Multiply and floor the value, then clamp between 0 and 255
+        imageData[i] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[i] * mult)));
+        imageData[x] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[x] * mult)));
+        imageData[y] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[y] * mult)));
+    }
+}`;
             
             // Create the WebAssembly module using the ASC compiler
             const wasmModule = await asc.compileString(code, {
