--- a/test1.html
+++ b/test1.html
@@ -24,10 +24,10 @@
         x = i + 1;
         y = i + 2;
 
-        // Multiply and floor the value, then clamp between 0 and 255
-        imageData[i] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[i] * mult)));
-        imageData[x] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[x] * mult)));
-        imageData[y] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[y] * mult)));
+        // Multiply, floor the value, clamp, and cast
+        imageData[i] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[i] * mult) as i32)) as u8;
+        imageData[x] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[x] * mult) as i32)) as u8;
+        imageData[y] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[y] * mult) as i32)) as u8;
     }
 }`;
             
