--- a/test1.html
+++ b/test1.html
@@ -24,10 +24,10 @@
         x = i + 1;
         y = i + 2;
 
-        // Directly multiply and clamp, with explicit casting at the end
-        imageData[i] = Math.min(255, Math.max(0, <u8>(Math.floor(<f64>imageData[i] * mult))));
-        imageData[x] = Math.min(255, Math.max(0, <u8>(Math.floor(<f64>imageData[x] * mult))));
-        imageData[y] = Math.min(255, Math.max(0, <u8>(Math.floor(<f64>imageData[y] * mult))));
+        // Multiply, floor (or truncate), and then clamp the value to [0, 255]
+        imageData[i] = <u8>Math.min(255, Math.max(0, <i32>(imageData[i] * mult) | 0));
+        imageData[x] = <u8>Math.min(255, Math.max(0, <i32>(imageData[x] * mult) | 0));
+        imageData[y] = <u8>Math.min(255, Math.max(0, <i32>(imageData[y] * mult) | 0));
     }
 }`;
             
