--- a/test1.html
+++ b/test1.html
@@ -24,10 +24,10 @@
         x = i + 1;
         y = i + 2;
 
-        // Multiply, floor (or truncate), and then clamp the value to [0, 255]
-        imageData[i] = <u8>Math.min(255, Math.max(0, <i32>(imageData[i] * mult) | 0));
-        imageData[x] = <u8>Math.min(255, Math.max(0, <i32>(imageData[x] * mult) | 0));
-        imageData[y] = <u8>Math.min(255, Math.max(0, <i32>(imageData[y] * mult) | 0));
+        // Multiply, floor the value, then clamp and store directly as u8
+        imageData[i] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[i] * mult)));
+        imageData[x] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[x] * mult)));
+        imageData[y] = <u8>Math.min(255, Math.max(0, Math.floor(imageData[y] * mult)));
     }
 }`;
             
